--- a/C++第一次实验的项目/C++第一次实验的项目.vcxproj.filters
+++ b/C++第一次实验的项目/C++第一次实验的项目.vcxproj.filters
@@ -21,12 +21,24 @@
     <ClInclude Include="targetver.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="InputTest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="FileReadTest.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="C++第一次实验的项目.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="InputTest.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="FileReadTest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
