--- a/C++第一次实验的项目/C++第一次实验的项目.vcxproj
+++ b/C++第一次实验的项目/C++第一次实验的项目.vcxproj
@@ -147,11 +147,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="FileReadTest.h" />
+    <ClInclude Include="InputTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="C++第一次实验的项目.cpp" />
+    <ClCompile Include="FileReadTest.cpp" />
+    <ClCompile Include="InputTest.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
