--- a/C++第一次实验的项目/C++第一次实验的项目.vcxproj
+++ b/C++第一次实验的项目/C++第一次实验的项目.vcxproj
@@ -147,13 +147,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CMypoint.h" />
     <ClInclude Include="FileReadTest.h" />
     <ClInclude Include="InputTest.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="C++第一次实验的项目.cpp" />
+    <ClCompile Include="C++第一次实验的项目.cpp">
+      <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">H:\boost_1_67_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+    </ClCompile>
+    <ClCompile Include="CMypoint.cpp" />
     <ClCompile Include="FileReadTest.cpp" />
     <ClCompile Include="InputTest.cpp" />
     <ClCompile Include="stdafx.cpp">
